# mlir-cobol

./: .gitignore  README.md  STATIC_ANALYSIS.md  cobol-front.py  cobol_dialect.py  pyproject.toml  test.cbl
docs/: design.md  known-failures.md  roadmap.md
examples/: add_stmt.cbl  bxx_type.cbl  compute_stmt.cbl  decls.cbl  display_float_number.cbl  display_identifiers_advancing.cbl  display_mul.cbl  display_multiple_args_with_advancing.cbl  display_num.cbl  display_one.cbl  display_screen_section_only_strings.cbl  display_screen_section_strings_and_number.cbl  display_substring.cbl  display_sum_integer_and_float.cbl  div_stmt.cbl  double_multiply_in_one_line.cbl  double_multiply_in_two_lines.cbl  duplicate_section_name_conflict.cbl  duplicate_var_name.cbl  evaluate_stmt.cbl  external_clause.cbl  goto_stmt.cbl  hello.cbl  ifelse.cbl  initialize_ number.cbl  initialize_ string.cbl  missing_pic_clause.cbl  move.cbl  mul_stmt.cbl  nnn_type.cbl  occurs_move_and_display_some_elements.cbl  paragraf_vs_ws_name_conflict.cbl  perform_loop.cbl  simple_input.cbl  simple_struct.cbl  simplest_var_decl.cbl  struct.cbl  testing_call_instruction.cbl  testing_open_and_close_type.cbl  var_decl_and_def.cbl  (+2 more)
src/: cobol-front.py  cobol_dialect.py  cobol_front.py  cobol_translate.py  emitc_lowering.py  memref_lowering.py
test/: decls.cbl  decls.test  decls_cpp.test  display_mul.test  display_num.test  display_num_cpp.test  hello.cbl  hello_cpp.test  ifelse.cbl  ifelse.test  just_stop.cbl  just_stop.test  lit.cfg.py  login.cbl  move.test  simple_input.cbl  simple_input.test
(+107 files in other folders)
